CV icon, mobile responsivity

--- a/index.html
+++ b/index.html
@@ -99,15 +99,20 @@
               with my friends and family.
             </p>
           </div>
+
           <div class="about__social">
-            <div class="about__social">
-              <a href="https://www.linkedin.com/in/tthuymai/"
-                ><i class="fa-brands fa-linkedin fa-2xl"></i
-              ></a>
-              <a href="https://github.com/mtthuy22"
-                ><i class="fa-brands fa-github fa-2xl"></i
-              ></a>
-            </div>
+            <a href="https://www.linkedin.com/in/tthuymai/"
+              ><i class="fa-brands fa-linkedin fa-2xl"></i
+            ></a>
+            <a href="https://github.com/mtthuy22"
+              ><i class="fa-brands fa-github fa-2xl"></i
+            ></a>
+            <a href="https://resume.io/r/NillTxxz9">
+              <img
+                class="about__cv"
+                src="assets/img/CV_icon_2.png"
+                alt="CV icon"/>
+            </a>
           </div>
         </div>
       </section>
