--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             <a class="menu__link" href="#contact">Contact</a>
           </li>
         </ul>
+        <a href="javascript:;" class="toggle-btn">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
       </nav>
     </header>
 
@@ -111,7 +116,8 @@
               <img
                 class="about__cv"
                 src="assets/img/CV_icon_2.png"
-                alt="CV icon"/>
+                alt="CV icon"
+              />
             </a>
           </div>
         </div>
@@ -247,5 +253,7 @@
     <footer class="footer">
       <p>&copy; Thu Thuy Mai 2022</p>
     </footer>
+    <!-- JAVASCRIPT -->
+    <script src="assets/js/index.js"></script>
   </body>
 </html>
