--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <nav class="menu">
         <ul class="menu__list">
           <li class="menu__item">
-            <a class="menu__link" href="#home">Home</a>
+            <a class="menu__link menu__home" href="#home">Home</a>
           </li>
           <li class="menu__item">
             <a class="menu__link" href="#about">Profile</a>
