--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     <!--COVER IMAGE-->
     <section id="home">
       <div class="cover">
+
         <div class="custom-shape-divider-bottom-1655648853">
           <svg
             data-name="Layer 1"
@@ -112,7 +113,7 @@
             <a href="https://github.com/mtthuy22"
               ><i class="fa-brands fa-github fa-2xl"></i
             ></a>
-            <a href="https://resume.io/r/NillTxxz9">
+            <a target="_blank" href="https://resume.io/r/NillTxxz9">
               <img
                 class="about__cv"
                 src="assets/img/CV_icon_2.png"
