--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="assets\css\style.css" />
-    <title>Hi, I am Thuy</title>
+    <title>Hi, I am Thuy||Web and front end developer</title>
     <script
       src="https://kit.fontawesome.com/923d045525.js"
       crossorigin="anonymous"
