--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
         <div class="cover__content txt-animation">
           <h1 class="cover__title">Hi, I am Thuy</h1>
-          <p class="cover__text">Junior Web & FE developer</p>
+          <p class="cover__text">Web & FE developer</p>
           <a
             class="cover__link"
             target="_blank"
