--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
           <li class="menu__item">
             <a class="menu__link" href="#experience">Experience</a>
           </li>
+          <!-- <li class="menu__item">
+            <a class="menu__link" href="#projects">Projects</a>
+          </li> -->
           <li class="menu__item">
             <a class="menu__link" href="#contact">Contact</a>
           </li>
@@ -51,7 +54,6 @@
     <!--COVER IMAGE-->
     <section id="home">
       <div class="cover">
-
         <div class="custom-shape-divider-bottom-1655648853">
           <svg
             data-name="Layer 1"
@@ -231,6 +233,49 @@
               <p>2014 - 2015</p>
             </div>
           </li>
+        </ul>
+      </section>
+
+      <!-- PROJECTS -->
+      <section id="projects" class="projects">
+        <h1 class="section__title">Projects</h1>
+        <ul class="section__list">
+          <li class="project">
+            <div class="project__image">
+              <img src="./assets/img/portfolio_web.png" alt="portfolio" />
+            </div>
+            <div class="project__container">
+              <h4 class="project__title">Portfolio web </h4>
+              <p class="project__text">
+                Personal web created with HTML, CSS and SCSS. You can check out the source code at
+                <a href="https://github.com/mtthuy22/my-personal-website" > here </a>
+              </p>
+            </div>
+          </li>
+          <li class="project">
+            <div class="project__image">
+              <img src="./assets/img/product preview card component.png" alt="product preview" />
+            </div>
+            <div class="project__container">
+              <h4 class="project__title">Product preview card component</h4>
+              <p class="project__text">
+                Product preview component from the <a href="https://www.frontendmentor.io/">Frontendmentor.io</a> website. Built using HTML, SCSS. You may check the source code <a href="https://github.com/mtthuy22/product-preview-card-component-main" > here </a> or see the <a href="https://thuycodes-challenge.netlify.app/" > website </a>. 
+              </p>
+            </div>
+          </li>
+          <li class="project">
+            <div class="project__image">
+              <img src="./assets/img/Clipboard landing page.png" alt="clipboard" />
+            </div>
+            <div class="project__container">
+              <h4 class="project__title">Clipboard landing page </h4>
+              <p class="project__text">
+                Clipboard landing page from the <a href="https://www.frontendmentor.io/">Frontendmentor.io</a> website. Built using HTML and pure CSS. You may check the source code <a href="https://github.com/mtthuy22/clipboard-landing-page" > here </a> or see the <a href="https://mtthuy22.github.io/clipboard-landing-page/" > website </a>. 
+              </p>
+            </div>
+          </li>
+
+
         </ul>
       </section>
 
