--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
           <li class="menu__item">
             <a class="menu__link" href="#experience">Experience</a>
           </li>
-          <!-- <li class="menu__item">
+          <li class="menu__item">
             <a class="menu__link" href="#projects">Projects</a>
-          </li> -->
+          </li>
           <li class="menu__item">
             <a class="menu__link" href="#contact">Contact</a>
           </li>
