--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
           <p class="cover__text">Web & FE developer</p>
           <a
             class="cover__link"
+            href="assets/cv/CV.pdf"
             target="_blank"
-            href="https://resume.io/r/NillTxxz9"
           >
             <button class="cover__btn">Full CV download</button></a
           >
