--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <a href="https://github.com/mtthuy22"
               ><i class="fa-brands fa-github fa-2xl"></i
             ></a>
-            <a target="_blank" href="https://resume.io/r/NillTxxz9">
+            <a target="_blank" href="assets/cv/CV.pdf">
               <img
                 class="about__cv"
                 src="assets/img/CV_icon_2.png"
