--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="cover__content txt-animation">
           <h1 class="cover__title">Hi, I am Thuy</h1>
-          <p class="cover__text">Frontend developer</p>
+          <p class="cover__text">Junior frontend developer</p>
           <a
             class="cover__link"
             href="assets/cv/CV.pdf"
