--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="cover__content txt-animation">
           <h1 class="cover__title">Hi, I am Thuy</h1>
-          <p class="cover__text">Junior frontend developer</p>
+          <p class="cover__text">Junior front-end developer</p>
           <a
             class="cover__link"
             href="assets/cv/CV.pdf"
@@ -93,7 +93,7 @@
           <h1 class="section__title">About</h1>
           <h4>Aspiring front-end developer</h4>
           <div class="about__text">
-            <p>I am Thuy, a frontend developer based in Czechia.</p>
+            <p>I am Thuy, a front-end developer based in Czechia.</p>
             <p>
               I have worked in multiple industries background and I started my
               complete career transition towards IT field in later 2020 with
