removed backslashes in path

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,600;1,800&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets\css\style.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
     <title>Thu Thuy || Web and front end developer</title>
     <script
       src="https://kit.fontawesome.com/923d045525.js"
