--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <p class="cover__text">Junior front-end developer</p>
           <a
             class="cover__link"
-            href="assets/cv/CV.pdf"
+            href="assets/cv/cv-thuy-mai.pdf"
             target="_blank"
           >
             <button class="cover__btn">Full CV download</button></a
@@ -87,7 +87,7 @@
       <!--about-->
       <section id="about" class="about">
         <div class="about__img">
-          <img src="assets/img/me_photo.jpg" alt="profile-pic" />
+          <img src="assets/img/me-photo.jpg" alt="profile-pic" />
         </div>
         <div class="about__info">
           <h1 class="section__title">About</h1>
@@ -115,10 +115,10 @@
             <a href="https://github.com/mtthuy22"
               ><i class="fa-brands fa-github fa-2xl"></i
             ></a>
-            <a target="_blank" href="assets/cv/CV.pdf">
+            <a target="_blank" href="assets/cv/cv-thuy-mai.pdf">
               <img
                 class="about__cv"
-                src="assets/img/CV_icon_2.png"
+                src="assets/img/cv-icon.png"
                 alt="CV icon"
               />
             </a>
@@ -213,7 +213,7 @@
         <ul class="section__list">
           <li class="project">
             <div class="project__image">
-              <img src="./assets/img/portfolio_web.png" alt="portfolio" />
+              <img src="./assets/img/portfolio-web.png" alt="portfolio" />
             </div>
             <div class="project__container">
               <h4 class="project__title">Portfolio web </h4>
@@ -225,7 +225,7 @@
           </li>
           <li class="project">
             <div class="project__image">
-              <img src="./assets/img/product preview card component.png" alt="product preview" />
+              <img src="./assets/img/product-preview-card.png" alt="product preview" />
             </div>
             <div class="project__container">
               <h4 class="project__title">Product preview card component</h4>
@@ -236,7 +236,7 @@
           </li>
           <li class="project">
             <div class="project__image">
-              <img src="./assets/img/Clipboard landing page.png" alt="clipboard" />
+              <img src="./assets/img/clipboard-landing-page.png" alt="clipboard" />
             </div>
             <div class="project__container">
               <h4 class="project__title">Clipboard landing page </h4>
