edited headings and styles

--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
           <h1 class="cover__title">Hi, I am Thuy</h1>
           <p class="cover__text">Junior front-end developer</p>
           <a
-            class="cover__link"
+            class="cover__btn"
             href="assets/cv/cv-thuy-mai.pdf"
             target="_blank"
           >
-            <button class="cover__btn">Full CV download</button></a
+            Full CV download</a
           >
         </div>
       </div>
@@ -90,8 +90,8 @@
           <img src="assets/img/me-photo.jpg" alt="profile-pic" />
         </div>
         <div class="about__info">
-          <h1 class="section__title">About</h1>
-          <h4>Aspiring front-end developer</h4>
+          <h2 class="section__title">About</h2>
+          <h3>Aspiring front-end developer</h3>
           <div class="about__text">
             <p>I am Thuy, a front-end developer based in Czechia.</p>
             <p>
@@ -129,14 +129,14 @@
       <!--skills -->
 
       <section id="skills" class="skills">
-        <h1 class="section__title">Skills</h1>
+        <h2 class="section__title">Skills</h2>
         <ul class="section__list skills__list">
           <li class="skill">
             <div class="skill__icon">
               <i class="fa-brands fa-html5 fa-4x"></i>
             </div>
             <div class="skill__desc">
-              <h4 class="skill__title">HTML</h4>
+              <h3 class="skill__title">HTML</h3>
               <p class="skill__text">
                 Semantic HTML elements, tables, lists, BEM methodology
               </p>
@@ -147,7 +147,7 @@
               <i class="fa-brands fa-css3-alt fa-4x"></i>
             </div>
             <div class="skill__desc">
-              <h4 class="skill__title">CSS</h4>
+              <h3 class="skill__title">CSS</h3>
               <p class="skill__text">
                 Grid, flexbox, Sass/SCSS preprocessor, basics of responsive
                 design
@@ -159,7 +159,7 @@
               <i class="fa-brands fa-js fa-4x"></i>
             </div>
             <div class="skill__desc">
-              <h4 class="skill__title">Javascript</h4>
+              <h3 class="skill__title">Javascript</h3>
               <p class="skill__text">
                 Basic knowledge of JavaScript, working with functions, arrays,
                 DOM
@@ -171,7 +171,7 @@
               <i class="fa-brands fa-react fa-4x"></i>
             </div>
             <div class="skill__desc">
-              <h4 class="skill__title">JS Frameworks</h4>
+              <h3 class="skill__title">JS Frameworks</h3>
               <p class="skill__text">
                 React.js - basics, components, reading API data, useState and
                 useEffect hooks <br />
@@ -184,7 +184,7 @@
               <i class="fa-solid fa-globe fa-4x"></i>
             </div>
             <div class="skill__desc">
-              <h4 class="skill__title">Multilingual</h4>
+              <h3 class="skill__title">Multilingual</h3>
               <p class="skill__text">
                 English - full proficiency<br />
                 French - intermediate <br />Japanese - elementary <br />
@@ -197,7 +197,7 @@
               <i class="fa-solid fa-ellipsis fa-4x"></i>
             </div>
             <div class="skill__desc">
-              <h4 class="skill__title">Other</h4>
+              <h3 class="skill__title">Other</h3>
               <p class="skill__text">
                 Photoshop, InDesign basics, Digital illustration, Accounting
                 software
@@ -209,14 +209,14 @@
 
        <!-- PROJECTS -->
        <section id="projects" class="projects">
-        <h1 class="section__title">Projects</h1>
+        <h2 class="section__title">Projects</h2>
         <ul class="section__list">
           <li class="project">
             <div class="project__image">
               <img src="./assets/img/portfolio-web.png" alt="portfolio" />
             </div>
             <div class="project__container">
-              <h4 class="project__title">Portfolio web </h4>
+              <h3 class="project__title">Portfolio web </h3>
               <p class="project__text">
                 Personal web created with HTML, CSS and SCSS. You can check out the source code at
                 <a href="https://github.com/mtthuy22/my-personal-website" > here </a>.
@@ -228,7 +228,7 @@
               <img src="./assets/img/product-preview-card.png" alt="product preview" />
             </div>
             <div class="project__container">
-              <h4 class="project__title">Product preview card component</h4>
+              <h3 class="project__title">Product preview card component</h3>
               <p class="project__text">
                 Responsive product preview component from the <a href="https://www.frontendmentor.io/">Frontendmentor.io</a> website. Built using HTML and pure CSS. You may check the source code <a href="https://github.com/mtthuy22/product-preview-card-component-main" > here </a> or see the <a href="https://thuycodes-challenge.netlify.app/" > website </a>. 
               </p>
@@ -239,7 +239,7 @@
               <img src="./assets/img/clipboard-landing-page.png" alt="clipboard" />
             </div>
             <div class="project__container">
-              <h4 class="project__title">Clipboard landing page </h4>
+              <h3 class="project__title">Clipboard landing page </h3>
               <p class="project__text">
                 Responsive clipboard landing page from the <a href="https://www.frontendmentor.io/">Frontendmentor.io</a> website. Built using HTML, SCSS and by applying BEM methodology. You may check the source code <a href="https://github.com/mtthuy22/clipboard-landing-page" > here </a> or see the <a href="https://mtthuy22.github.io/clipboard-landing-page/" > website </a>. 
               </p>
@@ -254,24 +254,24 @@
       <!-- Experience-->
 
       <section id="experience">
-        <h1 class="section__title">Experience</h1>
+        <h2 class="section__title">Experience</h2>
         <ul class="section__list">
           <li class="experience">
-            <h4 class="experience__title">Goodwill Housing s.r.o.</h4>
+            <h3 class="experience__title">Goodwill Housing s.r.o.</h3>
             <div class="experience__text">
               <p>Business manager</p>
               <p>2017 - present</p>
             </div>
           </li>
           <li class="experience">
-            <h4 class="experience__title">Fox Hunter s.r.o.</h4>
+            <h3 class="experience__title">Fox Hunter s.r.o.</h3>
             <div class="experience__text">
               <p>Project specialist</p>
               <p>2015 - 2017</p>
             </div>
           </li>
           <li class="experience">
-            <h4 class="experience__title">AC&C Public Relations s.r.o.</h4>
+            <h3 class="experience__title">AC&C Public Relations s.r.o.</h3>
             <div class="experience__text">
               <p>Account executive</p>
               <p>2014 - 2015</p>
