--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
           <p class="contact__subheading">Junior Web & FE developer</p>
         </div>
         <div class="contact__item">
-          <p class="contact__heading">Contact me</p>
+          <h2 class="contact__heading">Contact me</h2>
           <a href="mailto:mai.thuthuy91@gmail.com" class="contact__text"
             >mai.thuthuy91@gmail.com</a
           >
