anchor target change

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <a
             class="cover__btn"
             href="assets/cv/cv-thuy-mai.pdf"
-            target="_blank"
+            download
           >
             Full CV download</a
           >
@@ -115,7 +115,7 @@
             <a href="https://github.com/mtthuy22"
               ><i class="fa-brands fa-github fa-2xl"></i
             ></a>
-            <a target="_blank" href="assets/cv/cv-thuy-mai.pdf">
+            <a download href="assets/cv/cv-thuy-mai.pdf">
               <img
                 class="about__cv"
                 src="assets/img/cv-icon.png"
