--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       <!--about-->
       <section id="about" class="about">
         <div class="about__img">
-          <img src="assets/img/me-photo.jpg" alt="profile-pic" />
+          <img src="assets/img/me-photo.jpg" alt="" />
         </div>
         <div class="about__info">
           <h2 class="section__title">About</h2>
@@ -110,16 +110,16 @@
 
           <div class="about__social">
             <a href="https://www.linkedin.com/in/tthuymai/"
-              ><i class="fa-brands fa-linkedin fa-2xl"></i
+              ><i class="fa-brands fa-linkedin fa-2xl" title="LinkedIn profile"></i
             ></a>
             <a href="https://github.com/mtthuy22"
-              ><i class="fa-brands fa-github fa-2xl"></i
+              ><i class="fa-brands fa-github fa-2xl" title="Github profile"></i
             ></a>
             <a download href="assets/cv/cv-thuy-mai.pdf">
               <img
                 class="about__cv"
                 src="assets/img/cv-icon.png"
-                alt="CV icon"
+                alt="download CV"
               />
             </a>
           </div>
@@ -213,7 +213,7 @@
         <ul class="section__list">
           <li class="project">
             <div class="project__image">
-              <img src="./assets/img/portfolio-web.png" alt="portfolio" />
+              <img src="./assets/img/portfolio-web.png" alt="" />
             </div>
             <div class="project__container">
               <h3 class="project__title">Portfolio web </h3>
@@ -225,7 +225,7 @@
           </li>
           <li class="project">
             <div class="project__image">
-              <img src="./assets/img/product-preview-card.png" alt="product preview" />
+              <img src="./assets/img/product-preview-card.png" alt="" />
             </div>
             <div class="project__container">
               <h3 class="project__title">Product preview card component</h3>
@@ -236,7 +236,7 @@
           </li>
           <li class="project">
             <div class="project__image">
-              <img src="./assets/img/clipboard-landing-page.png" alt="clipboard" />
+              <img src="./assets/img/clipboard-landing-page.png" alt="" />
             </div>
             <div class="project__container">
               <h3 class="project__title">Clipboard landing page </h3>
