--- a/index.html
+++ b/index.html
@@ -71,11 +71,7 @@
         <div class="cover__content txt-animation">
           <h1 class="cover__title">Hi, I am Thuy</h1>
           <p class="cover__text">Junior front-end developer</p>
-          <a
-            class="cover__btn"
-            href="assets/cv/cv-thuy-mai.pdf"
-            download
-          >
+          <a class="cover__btn" href="assets/cv/cv-thuy-mai.pdf" download>
             Full CV download</a
           >
         </div>
@@ -110,7 +106,10 @@
 
           <div class="about__social">
             <a href="https://www.linkedin.com/in/tthuymai/"
-              ><i class="fa-brands fa-linkedin fa-2xl" title="LinkedIn profile"></i
+              ><i
+                class="fa-brands fa-linkedin fa-2xl"
+                title="LinkedIn profile"
+              ></i
             ></a>
             <a href="https://github.com/mtthuy22"
               ><i class="fa-brands fa-github fa-2xl" title="Github profile"></i
@@ -207,8 +206,8 @@
         </ul>
       </section>
 
-       <!-- PROJECTS -->
-       <section id="projects" class="projects">
+      <!-- PROJECTS -->
+      <section id="projects" class="projects">
         <h2 class="section__title">Projects</h2>
         <ul class="section__list">
           <li class="project">
@@ -216,10 +215,13 @@
               <img src="./assets/img/portfolio-web.png" alt="" />
             </div>
             <div class="project__container">
-              <h3 class="project__title">Portfolio web </h3>
+              <h3 class="project__title">Portfolio web</h3>
               <p class="project__text">
-                Personal web created with HTML, CSS and SCSS. You can check out the source code at
-                <a href="https://github.com/mtthuy22/my-personal-website" > here </a>.
+                Personal web created with HTML, CSS and SCSS. You can check out
+                the source code at
+                <a href="https://github.com/mtthuy22/my-personal-website">
+                  here </a
+                >.
               </p>
             </div>
           </li>
@@ -230,7 +232,18 @@
             <div class="project__container">
               <h3 class="project__title">Product preview card component</h3>
               <p class="project__text">
-                Responsive product preview component from the <a href="https://www.frontendmentor.io/">Frontendmentor.io</a> website. Built using HTML and pure CSS. You may check the source code <a href="https://github.com/mtthuy22/product-preview-card-component-main" > here </a> or see the <a href="https://thuycodes-challenge.netlify.app/" > website </a>. 
+                Responsive product preview component from the
+                <a href="https://www.frontendmentor.io/">Frontendmentor.io</a>
+                website. Built using HTML and pure CSS. You may check the source
+                code
+                <a
+                  href="https://github.com/mtthuy22/product-preview-card-component-main"
+                >
+                  here
+                </a>
+                or see the
+                <a href="https://thuycodes-challenge.netlify.app/"> website </a
+                >.
               </p>
             </div>
           </li>
@@ -239,17 +252,24 @@
               <img src="./assets/img/clipboard-landing-page.png" alt="" />
             </div>
             <div class="project__container">
-              <h3 class="project__title">Clipboard landing page </h3>
+              <h3 class="project__title">Clipboard landing page</h3>
               <p class="project__text">
-                Responsive clipboard landing page from the <a href="https://www.frontendmentor.io/">Frontendmentor.io</a> website. Built using HTML, SCSS and by applying BEM methodology. You may check the source code <a href="https://github.com/mtthuy22/clipboard-landing-page" > here </a> or see the <a href="https://mtthuy22.github.io/clipboard-landing-page/" > website </a>. 
+                Responsive clipboard landing page from the
+                <a href="https://www.frontendmentor.io/">Frontendmentor.io</a>
+                website. Built using HTML, SCSS and by applying BEM methodology.
+                You may check the source code
+                <a href="https://github.com/mtthuy22/clipboard-landing-page">
+                  here
+                </a>
+                or see the
+                <a href="https://mtthuy22.github.io/clipboard-landing-page/">
+                  website </a
+                >.
               </p>
             </div>
           </li>
-
-
         </ul>
       </section>
-
 
       <!-- Experience-->
 
@@ -280,7 +300,6 @@
         </ul>
       </section>
 
-     
       <!-- Contact -->
       <section id="contact" class="contact">
         <div class="contact__item">
