about me line update

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         <div class="about__info">
           <h2 class="section__title">About</h2>
-          <h3>Aspiring front-end developer</h3>
+          <p><strong>Aspiring front-end developer</strong></p>
           <div class="about__text">
             <p>I am Thuy, a front-end developer based in Czechia.</p>
             <p>
