added anchor wrapper and telephonelink

--- a/index.html
+++ b/index.html
@@ -309,10 +309,13 @@
         </div>
         <div class="contact__item">
           <h2 class="contact__heading">Contact me</h2>
+          <p>
           <a href="mailto:mai.thuthuy91@gmail.com" class="contact__text"
             >mai.thuthuy91@gmail.com</a
-          >
-          <p class="contact__text">+420 724 966 657</p>
+          ></p>
+          <p class="contact__text">
+            <a href="tel:+420724966657">+420 724 966 657</a>
+          </p>
         </div>
       </section>
     </main>
