accessible icon fixes

--- a/index.html
+++ b/index.html
@@ -106,13 +106,15 @@
 
           <div class="about__social">
             <a href="https://www.linkedin.com/in/tthuymai/"
-              ><i
+              ><span class="sr-only">LinkedIn profile</span>
+              <i
                 class="fa-brands fa-linkedin fa-2xl"
                 title="LinkedIn profile"
               ></i
             ></a>
             <a href="https://github.com/mtthuy22"
-              ><i class="fa-brands fa-github fa-2xl" title="Github profile"></i
+              ><span class="sr-only">GitHub profile</span>
+              <i class="fa-brands fa-github fa-2xl" title="Github profile"></i
             ></a>
             <a download href="assets/cv/cv-thuy-mai.pdf">
               <img
