changed responsive menu button

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             <a class="menu__link" href="#contact">Contact</a>
           </li>
         </ul>
-        <a href="javascript:;" class="toggle-btn">
+        <button type="button" class="toggle-btn">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
-        </a>
+        </button>
       </nav>
     </header>
 
