changed navigation bar

--- a/index.html
+++ b/index.html
@@ -23,26 +23,14 @@
 
     <header class="header">
       <nav class="menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a class="menu__link menu__home" href="#home">Home</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#about">Profile</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#skills">Skills</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#projects">Projects</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#experience">Experience</a>
-          </li>
-          <li class="menu__item">
-            <a class="menu__link" href="#contact">Contact</a>
-          </li>
-        </ul>
+        <div class="menu__list">
+          <a class="menu__link menu__home" href="#home">Home</a>
+          <a class="menu__link" href="#about">Profile</a>
+          <a class="menu__link" href="#skills">Skills</a>
+          <a class="menu__link" href="#projects">Projects</a>
+          <a class="menu__link" href="#experience">Experience</a>
+          <a class="menu__link" href="#contact">Contact</a>
+        </div>
         <button type="button" class="toggle-btn">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -312,9 +300,10 @@
         <div class="contact__item">
           <h2 class="contact__heading">Contact me</h2>
           <p>
-          <a href="mailto:mai.thuthuy91@gmail.com" class="contact__text"
-            >mai.thuthuy91@gmail.com</a
-          ></p>
+            <a href="mailto:mai.thuthuy91@gmail.com" class="contact__text"
+              >mai.thuthuy91@gmail.com</a
+            >
+          </p>
           <p class="contact__text">
             <a href="tel:+420724966657">+420 724 966 657</a>
           </p>
